--- a/index.html
+++ b/index.html
@@ -13,6 +13,35 @@
 
 <body>
 
+  <header class="main-head">
+    <nav>
+      <h1 id="logo">Elena Joy</h1>
+      <ul class="nav-links">
+        <li><a href="#about">About</a></li>
+        <li><a href="#work">Work</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+
+    <section class="hero">
+      <div class="hero-introduction flex">
+        <h2>Elena Joy <br> Photography</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem eum voluptas, in suscipit hic dolor quia
+          totam non dolore aliquam?</p>
+        <a href="#gallery">Gallery</a>
+      </div>
+      <div class="hero-images">
+        <img class="hero-elena" src="./img/elena-joy.png" alt="Picture of Elena Joy">
+        <img class="plant1 plant" src="./img/plant1.png" alt="">
+        <img class="plant2 plant" src="./img/plant2.png" alt="">
+      </div>
+    </section>
+
+  </main>
+
 </body>
 
 </html>
