--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <section class="hero">
       <div class="hero-introduction flex">
         <h2>Elena Joy <br> Photography</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem eum voluptas, in suscipit hic dolor quia
-          totam non dolore aliquam?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus odio voluptate fuga! Autem animi
+          blanditiis omnis harum placeat sapiente doloribus?</p>
         <a href="#gallery">Gallery</a>
       </div>
       <div class="hero-images">
